terraform/06.securitygroup.tf
resource "aws_security_group" "openmed-desa-ec2-sg" {
  name        = "openmed-desa-ec2-sg"
  description = "Allow API Access"
  vpc_id      = aws_vpc.openmed-vpc-desa.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "openmed-desa-db-sg" {
  name        = "openmed-desa-db-sg"
  description = "Allow API Access"
  vpc_id      = aws_vpc.openmed-vpc-desa.id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
